fix(components): update refereces to ban icon (#3169)

--- a/packages/design-system/ui/components/alert/docs.mdx
+++ b/packages/design-system/ui/components/alert/docs.mdx
@@ -81,7 +81,7 @@ Use the error variant when you need to alert the user about an error in the syst
         containerClassName="slds-m-right_x-small"
         className="slds-icon_x-small"
         assistiveText={false}
-        symbol="ban"
+        symbol="error"
       />
       <h2>
         Your browser is currently not supported. Your Salesforce may be
