feat(icons): add success class for icon-text-color (#3293)

--- a/packages/design-system/ui/components/icons/docs.mdx
+++ b/packages/design-system/ui/components/icons/docs.mdx
@@ -139,6 +139,16 @@ To change the fill of an icon to the default text color, add the `slds-icon-text
   </CodeView>
 </Example>
 
+### Success
+
+To change the fill of an icon to the success text color, add the `slds-icon-text-success` class to the icon.
+
+<Example title="Utility Warning">
+  <CodeView>
+    <UtilityIcon className="slds-icon-text-success" />
+  </CodeView>
+</Example>
+
 ### Warning
 
 To change the fill of an icon to the warning text color, add the `slds-icon-text-warning` class to the icon.
