fix(panels): Reduce body spacing, update filter examples to use close button (#3291)

--- a/packages/design-system/ui/components/panels/docs.mdx
+++ b/packages/design-system/ui/components/panels/docs.mdx
@@ -190,7 +190,7 @@ A component that uses the base panel component is the Filtering Panel.
     size="medium"
     title="Filter"
     docked="right"
-    invoke="drill-in"
+    invoke="toggle"
   >
     <Filters>
       <ol className="slds-list_vertical slds-list_vertical-space">
